# Mars-Rover-code

./: CONTRIBUTING.md  README.md  SECURITY.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: dependabot.yml
arduino-mega-code/lib/ServoEasing/: .piopm
arduino-mega-code/src/: main.cpp
docs/: index.html
docs/Assets/css/: style.css
docs/Assets/js/: indexhtmlhider.js
esp32-code/: platformio.ini
esp32-code/src/: main.cpp
pi-code/: pyproject.toml  requirements.txt  setup.sh
pi-code/src/pi-code/: __init__.py
src/: main.cpp
